Added wildlife routes and swagger documentation
